# jaff

./: .gitignore  AGENTS.md  CMakeLists.txt  MANIFEST.in  README.md  chemistry_ode.cpp  chemistry_ode.hpp  jaff.network.schema.json  jaff.test.toml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  test-notebooks.yml  tests.yml
docs/: index.md
docs/about/: license.md
docs/api/: codegen.md  elements.md  index.md  jaff-types.md  network.md  species.md
docs/api/codegen/: index.md
docs/api/codegen/builder/: build.md  index.md
docs/api/codegen/codegen/: dfs.md  get_commons.md  get_dedt.md  get_flux_expressions_str.md  get_indexed_flux_expressions.md  get_indexed_jacobian.md  get_indexed_ode_expressions.md  get_indexed_odes.md  get_indexed_radodes.md  get_indexed_rates.md  get_indexed_rhs.md  get_jacobian_str.md  get_language_tokens.md  get_ode_expressions_str.md  get_ode_str.md  get_radode_str.md  get_rates_str.md  get_rhs_str.md  index.md  replace_y.md  resolve_dexpr.md
docs/api/codegen/preprocessor/: index.md  preprocess.md  preprocess_file.md
docs/api/core/: index.md
docs/api/core/element/: configure.md  index.md
docs/api/core/elements/: atomic_masses.md  configure.md  density_matrix.md  electrons.md  from_name.md  from_symbol.md  get_list.md  index.md  masses.md  names.md  neutrons.md  protons.md  symbols.md  truth_matrix.md
docs/api/core/network/: check_isomers.md  check_recombinations.md  check_sink_sources.md  check_unique_reactions.md  compare_reactions.md  (+10 more)
docs/api/drivers/: index.md
docs/api/physics/: index.md
docs/development/: adding-parsers.md  adding-shielding-functions.md  adding-template-properties.md  code-style.md  codebase-structure.md  contributing.md  installation.md  testing.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/javascripts/: mathjax.js  nav-indicator.js  page-transition.js
docs/stylesheets/: extra.css
docs/user-guide/: network-formats.md  reactions.md  species.md  template-syntax.md
docs/user-guide/advanced-code-generation/: builder.md  codegen.md  index.md
docs/user-guide/code-generation/: index.md  jaff-toml.md  jaffgen.md  table-interpolation.md  template-syntax.md  worked-example.md
docs/user-guide/designing-networks/: auxiliary-functions.md  index.md  network-formats.md  photochemistry.md  predefined-networks.md
docs/user-guide/working-with-networks/: elements.md  index.md  jaffx.md  network.md  reactions.md  species.md
examples/: builder.ipynb  cpp_codegen.ipynb  export_table.ipynb  main.ipynb
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_chunk_07.json  .graphify_detect.json  .graphify_python  .graphify_root  .graphify_uncached.txt
networks/: GOW.dat_functions  GOW.jfunc  h_photo.dat.jfunc  react_COthin.jfunc  uclchem_small_gas_network.csv
networks/COthin/: react_COthin.jet
networks/GOW/: GOW.hdf5  GOW.jet  GOW.jfunc
networks/demos/: demo2.jet
networks/h_photoionization/: h_photo.jet
networks/kida_uva_2024/: gas_reactions_kida.uva.2024.in
networks/popsicle_semenov/: react_popsicle_semenov
src/jaff/: __init__.py  auxilary_file_parser.py  builder.py  codegen.py  config_table_parser.py  elements.py  file_parser.py  generate.py  jaff_types.py  network.py  network_parser.py  photochemistry.py  preprocessor.py  radiation.py  reaction.py  registry.txt  species.py  sympy_json.py
src/jaff/_utils/: add_shielding_column.py  build_shielding_hdf5.py  build_shielding_table.py  collapse_xsecs_hdf5.py  download_nahar_xsecs.py  generate_ion_xsecs_table.py  generate_mass_table.py  generate_photo_xsecs_table.py  generate_verner_xsecs_table.py  split_xsecs_photodecay.py
src/jaff/cli/: __init__.py  _config_engine.py  _jaffgen.py  _jaffx.py  jaffx.py
src/jaff/codegen/: __init__.py  _template_engine.py  builder.py  codegen.py  preprocessor.py
src/jaff/common/: __init__.py  _fastlog.py  _helper.py  _integrators.py  _sympy_json.py  _welcome.py  fastlog.py  helper.py  sympy_json.py  welcome.py
src/jaff/config/: __init__.py  _config.py
src/jaff/core/: __init__.py  _auxiliary_engine.py  _network_engine.py  elements.py  io.py  logger.py  network.py  reaction.py  species.py
src/jaff/data/: atom_mass.csv
src/jaff/db/: jaff.db
src/jaff/drivers/: __init__.py  csv.py  hdf5.py  pooch.py  sqlite.py  toml.py
src/jaff/errors/: __init__.py  _parser.py  _units.py  parser.py
src/jaff/io/: __init__.py  _io.py  _logger.py
src/jaff/physics/: __init__.py  _equations.py  _photochemistry.py  _radiation.py  _units.py  constants.py  equations.py  radiation.py
src/jaff/plotting/: __init__.py  plotter.py
src/jaff/types/: __init__.py  _catalogue.py  _hdf5.py  _indexed.py  _vector.py  catalogue.py  vector.py
src/jaff/utils/: __init__.py  generate_ion_xsecs_table.py  generate_mass_table.py  integrators.py
tests/: test_cse_generation.py  test_languages.py  test_network_edge_cases.py  test_network_initialization.py  test_network_json.py  test_network_parsers.py  test_network_validation.py  test_ode_and_jac.py  test_repo_networks_json_roundtrip.py  test_sympy_json.py  test_units.py
tests/fixtures/: sample_kida_valid.dat_functions  sample_kida_valid.jfunc  test_jac_dedt.dat_functions
(+184 files in other folders)
