[project]
name = "jaff"
version = "0.1.0"
description = "An astrochemical network parser"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "h5py>=3.9.0",
  "matplotlib>=3.9.4",
  "numpy>=2.0.0",
  "pandas>=2.3.3",
  "pygments>=2.19.2",
  "scipy>=1.13.0",
  "sympy>=1.14.0",
  "tqdm>=4.67.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/tgrassi/jaff/issues"
"Homepage" = "https://github.com/tgrassi/jaff"

[project.scripts]
jaff = "jaff.cli:main"
jaffgen = "jaff.generate:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "check-jsonschema",
  "zensical",
  "mkdocstrings[python]>=0.24.0",
  "pymdown-extensions>=10.5",
  "pygments"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "templates",
]
extend-include = ["*.ipynb"]
line-length = 90
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jaff = ["data/*.dat", "templates/**/*", "src/jaff/db/jaff.db"]
