[project]
name = "jaff"
version = "0.1.5"
description = "An astrochemical network parser"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "astropy",
  "h5py>=3.9.0",
  "ipykernel>=7.2.0",
  "marimo>=0.23.8",
  "matplotlib>=3.9.4",
  "numpy>=2.0.0",
  "pandas>=2.3.3",
  "pooch>=1.9.0",
  "pygments>=2.19.2",
  "rich>=15.0.0",
  "scipy>=1.13.0",
  "sympy>=1.14.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/jaff-chemistry/jaff/issues"
"Homepage" = "https://github.com/jaff-chemistry/jaff"

[project.scripts]
jaffgen = "jaff.cli._jaffgen:main"
jaffx = "jaff.cli._jaffx:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "check-jsonschema",
  "zensical",
  "mkdocstrings[python]>=0.24.0",
  "pymdown-extensions>=10.5",
  "pygments"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
force-exclude = true
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "templates",
]
extend-include = ["*.ipynb"]
line-length = 90
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# astropy.constants injects its members dynamically at import, so static
# checkers cannot resolve attributes like `astropy.constants.c`. Suppress the
# false positive for the constants module only (runtime is fine).
[[tool.ty.overrides]]
include = ["src/jaff/physics/constants.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jaff = ["data/*.dat", "templates/**/*", "db/jaff.db"]
